<resources>
    <string name="app_name">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="sign_up">Signup</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an Account?</string>
    <string name="email">Email</string>
    <string name="already_have_account">Already have an Account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
</resources>
