<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
     android:background="@color/white"
    android:isScrollContainer="true"
    android:scrollbars="none">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="32dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="32dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"

            android:textStyle="bold" />

        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/username"
            android:textColor="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_left_right"
            android:layout_marginLeft="@dimen/margin_left_right"
            android:layout_marginRight="@dimen/margin_left_right"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text_background_selectable"
            android:minHeight="40dp"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:textColor="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_left_right"
            android:layout_marginLeft="@dimen/margin_left_right"
            android:layout_marginRight="@dimen/margin_left_right"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text_background_selectable"
            android:inputType="textPassword"
            android:minHeight="40dp"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_right"
            android:layout_marginRight="@dimen/margin_left_right"
            android:background="@drawable/login_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="6dp"
                android:text="@string/dont_have_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/green"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
    </FrameLayout>

</ScrollView>
